@@ -2,6 +2,8 @@ Ubercart Addresses 7.x-1.x, xxxx-xx-xx
 ------------------------------
 - Issue #1974976 by MegaChriz: fixed failing upgrade path from uc_addresses
   6.x-1.x.
+- Issue #1986798 by MegaChriz: fixed bug where two addresses could be marked as
+  the same default type through the API.
 
 Ubercart Addresses 7.x-1.0-alpha2, 2013-04-18
 ------------------------------
